# maestro-langgraph

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
.claude/commands/: add-provider.md  new-workflow.md  run.md  status.md  test.md
.claude/skills/add-node/: SKILL.md
.claude/skills/add-provider/: SKILL.md
.claude/skills/add-workflow/: SKILL.md
.claude/skills/debug-workflow/: SKILL.md
.claude/skills/product-owner/: SKILL.md
.claude/skills/test-patterns/: SKILL.md
examples/: README.md
examples/adaptive/: graph.py  nodes.py  run.py  state.py
examples/adaptive/prompts/: plan.txt  verify.txt
examples/chain_of_thought/: graph.py  nodes.py  run.py  state.py
examples/chain_of_thought/prompts/: reasoner.txt
examples/pr_review/: graph.py  nodes.py  run.py  state.py
guides/: skill-builder-example.md  skill-builder.md
guides/cookbooks/: adversarial-review.md  codebase-onboarding.md  multi-angle-research.md  think-plan-act-verify.md
infrastructure/: .env.example  docker-compose.yml  setup.sh  start.sh  stop.sh  watchdog.sh
infrastructure/prometheus/: prometheus.yml
infrastructure/searxng/: settings.yml
src/langgraph_maestro/: __init__.py  cli.py  default_config.yaml
src/langgraph_maestro/core/: __init__.py  budget.py  checkpointer.py  config.py  datasets.py  e2e_discovery.py  eval.py  lint.py  llm.py  logging.py  mc.py  pe.py  prompts.py  (+14 more)
tests/: conftest.py  test_web.py
tests/unit/: test_budget.py  test_codex_provider.py  test_config.py  test_config_helpers.py  test_datasets.py  test_extract_json.py  test_issue_to_pr_nodes.py  test_lint.py  test_llm_routing.py  test_logging.py  test_maestro_nodes.py  test_maestro_nodes_structured.py  test_mc.py  test_new_nodes.py  test_new_workflows.py  test_pe.py  test_pr_review_parallel.py  test_ratelimit.py  test_registry.py  test_skills.py  test_stall.py  test_structured.py  test_templates.py  test_tracing.py  test_validation.py
(+122 files in other folders)
