[project]
name = "langgraph-maestro"
version = "0.1.0"
description = "Multi-agent LLM workflow orchestration framework built on LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Shane Mattner" },
]
keywords = ["langgraph", "llm", "orchestration", "multi-agent", "workflow", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "pyyaml>=6.0",
    "anthropic>=0.50",
    "pydantic>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
maestro = "langgraph_maestro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_maestro"]

[tool.hatch.build]
include = [
    "src/langgraph_maestro/**/*.py",
    "src/langgraph_maestro/**/*.yaml",
    "src/langgraph_maestro/**/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "tracing: marks tests that require tracing (Langfuse/OTel)",
    "enable_pe: marks tests that need real PE (improve_prompt not mocked)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
